Solve Vercel Problem

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="img/logo.png" alt="website-logo">
       </div>
  
-       <ul>
+       <ul class="nav-links">
          <li><a href="#home">Home</a></li>
          <li><a href="#about">About</a></li>
          <li><a href="#services">Services</a></li>
@@ -329,13 +329,14 @@
      <h1><span id="Shubpy">Technologies</span> We Work With</h1>
         <div class="tech-content">
        
-        <button class id="tab">Backend</button>
+        <button class="active">Backend</button>
         <button>Frontend</button>
         <button>Mobile</button>
         <button>CMS</button>
         <button>Ecommerce</button>
         <button>Database</button>
-        <button>Infra & Devops</button>
+        <button>Infra & Devops</button> 
+   
 
     </div>
 
