--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <img src="img/logo.png" alt="website-logo">
       </div>
  
-       <ul class="nav-links">
-         <li><a href="#home">Home</a></li>
-         <li><a href="#about">About</a></li>
-         <li><a href="#services">Services</a></li>
-         <li><a href="#test">Testimonials</a></li>
-         <li><a href="">Blogs</a></li>
-         <li><a href="#contact-us">Contact Us</a></li>
+       <ul class="nav-links showData" id="menubar">
+         <li><a href="#home"   class="navbar">Home</a></li>
+         <li><a href="#about" class="navbar">About</a></li>
+         <li><a href="#services" class="navbar">Services</a></li>
+         <li><a href="#test" class="navbar">Testimonials</a></li>
+         <li><a href="" class="navbar">Blogs</a></li>
+         <li><a href="#contact-us" class="navbar">Contact Us</a></li>
          <button class="btn" id="hire-d">Hire Developers <i class="fa-solid fa-arrow-right"></i></button>
       </ul>
            <div class="menu-icon">
@@ -134,7 +134,7 @@
         </div>
         
     </div>
-     <div class="glow-right-content"></div>
+     <div class=" "></div>
   </div>
 </section>
 
